--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,8 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/icons/gifs/loader.gif
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
