--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
+  google_sign_in: ^5.0.3
+
+  #Google Icon
+  font_awesome_flutter: ^9.0.0
+
+  # State Management
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
