--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ flutter_icons:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/icons/gifs/loader.gif
+    - assets/icons/
+    - assets/icons/gifs/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
